Nikola auto commit.
Source commit: acfd8baf43fb2449df6e940177ca416f2546d6a9
Nikola version: 8.3.3

--- a/en/statement1/2025-03-12-pv9877-closed-ip/index.html
+++ b/en/statement1/2025-03-12-pv9877-closed-ip/index.html
@@ -75,6 +75,7 @@ bg-success
                     <a href="../2024-06-24-pv9666-ip/" class="dropdown-item">UNSC 9666 - 2024-06-24</a>
                     <a href="../2024-12-17-pv9818-ip/" class="dropdown-item">UNSC 9818 - 2024-12-17</a>
                     <a href="." class="dropdown-item active">UNSC 9877 - 2025-03-12 <span class="sr-only">(active)</span></a>
+                    <a href="../2025-06-24-pv9944-ip/" class="dropdown-item">UNSC 9944 - 2025-06-24</a>
             </div>
 
                 
@@ -107,7 +108,8 @@ bg-success
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2024-12-17-pv9818-ip/">⬅️</a></th>
-  <!-- <th scope="col" style="width: 50px;"><a href="/en/">➡️</a></th> --> <!-- back to home page -->     
+  <th scope="col" style="width: 50px;"><a href="../2025-06-24-pv9944-ip/">➡️</a></th>
+  <!-- <th scope="col" style="width: 50px;"><a href="/fr/">➡️</a></th> --> <!-- back to home page -->    
 </tr></table>
 <p>United Nations Security Council S/PV.9877</p>
 <p>Eightieth year, 9877<sup>th</sup> meeting</p>
@@ -162,7 +164,7 @@ bg-success
 <hr>
 <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2024-12-17-pv9818-ip/">⬅️</a></th>
-  <th scope="col" style="width: 50px;"><a href="."></a></th> <!-- blank -->
+  <th scope="col" style="width: 50px;"><a href="../2025-06-24-pv9944-ip/">➡️</a></th>
   <th scope="col" style="width: 50px;"><a href=".">⬆️</a></th>      
 </tr></table>
 </div>
