--- a/en/statement1/introduction1/index.html
+++ b/en/statement1/introduction1/index.html
@@ -75,6 +75,7 @@ bg-success
                     <a href="../2024-06-24-pv9666-ip/" class="dropdown-item">UNSC 9666 - 2024-06-24</a>
                     <a href="../2024-12-17-pv9818-ip/" class="dropdown-item">UNSC 9818 - 2024-12-17</a>
                     <a href="../2025-03-12-pv9877-closed-ip/" class="dropdown-item">UNSC 9877 - 2025-03-12</a>
+                    <a href="../2025-06-24-pv9944-ip/" class="dropdown-item">UNSC 9944 - 2025-06-24</a>
             </div>
 
                 
@@ -142,6 +143,8 @@ the Iranian representatives delivered a statement.</p>
 <li>2024-12-17 UNSC 9818th Meeting <a href="../2024-12-17-pv9818-ip/">Mr. Iravani</a>
 </li>
 <li>2025-03-12 UNSC 9877th Meeting <a href="../2025-03-12-pv9877-closed-ip/">Mr. Iravani</a>
+</li>
+<li>2025-06-24 UNSC 9944th Meeting <a href="../2025-06-24-pv9944-ip/">Mr. Iravani</a>
 </li>
 </ul>
 <!--
@@ -576,6 +579,25 @@ https://en.wikipedia.org/wiki/Permanent_Representative_of_Iran_to_the_United_Nat
         <td class="c4"></td>
         <td class="c5">
           <p><a href="../2025-03-12-pv8977-closed-ip/"> Mr. Iravani</a></p>
+        </td>                
+      </tr>
+<tr>
+<td class="c4">
+          <p>68</p>
+        </td>
+        <td class="c4">
+          <p>2025-06-24</p>
+        </td>
+        <td class="c4">
+          <p><a href="https://www.undocs.org/en/S/PV.9944?direct=true">S/PV.9944</a></p>
+        </td>
+        <td class="c4">
+          <p><a href="https://press.un.org/en/2025/sc16100.doc.htm?direct=true">SC/16100</a></p>
+        </td>
+        <td class="c4"></td>
+        <td class="c4"></td>
+        <td class="c5">
+          <p><a href="../2025-06-24-pv9944-ip/"> Mr. Iravani</a></p>
         </td>                
       </tr>
 <!-- Tail -->
