--- a/fr/statement1/introduction1/index.html
+++ b/fr/statement1/introduction1/index.html
@@ -75,6 +75,7 @@ bg-success
                     <a href="../2024-06-24-pv9666-ip/" class="dropdown-item">CSNU 9666 - 2024-06-24</a>
                     <a href="../2024-12-17-pv9818-ip/" class="dropdown-item">CSNU 9818 - 2024-12-17</a>
                     <a href="../2025-03-12-pv9877-closed-ip/" class="dropdown-item">CSNU 9877 - 2025-03-12</a>
+                    <a href="../2025-06-24-pv9944-ip/" class="dropdown-item">CSNU 9944 - 2025-06-24</a>
             </div>
 
                 
@@ -138,6 +139,8 @@ bg-success
 <li>2024-12-17 SCNU 9818<sup>e</sup> Réunion <a href="../2024-12-17-pv9818-ip/">M Iravani</a>
 </li>
 <li>2025-03-12 SCNU 9877<sup>e</sup> Réunion <a href="../2025-03-12-pv9877-closed-ip/">M Iravani</a>
+</li>
+<li>2025-06-24 SCNU 9944<sup>e</sup> Réunion <a href="../2025-06-24-pv9944-ip/">M Iravani</a>
 </li>
 </ul>
 <!--
@@ -572,6 +575,25 @@ https://en.wikipedia.org/wiki/Permanent_Representative_of_Iran_to_the_United_Nat
         <td class="c4"></td>
         <td class="c5">
           <p><a href="../2025-03-12-pv9877-closed-ip/">M Iravani</a></p>
+        </td>                
+      </tr>
+<tr>
+<td class="c4">
+          <p>68</p>
+        </td>
+        <td class="c4">
+          <p>2025-06-24</p>
+        </td>
+        <td class="c4">
+          <p><a href="https://www.undocs.org/fr/S/PV.9944?direct=true">S/PV.9944</a></p>
+        </td>
+        <td class="c4">
+          <p><a href="https://press.un.org/en/2025/sc16100.doc.htm?direct=true">SC/16100</a></p>
+        </td>
+        <td class="c4"></td>
+        <td class="c4"></td>
+        <td class="c5">
+          <p><a href="../2025-06-24-pv9944-ip/">Mr. Iravani</a></p>
         </td>                
       </tr>
 <!-- Tail -->
