--- a/en/statement1/2024-06-24-pv9666-ip/index.html
+++ b/en/statement1/2024-06-24-pv9666-ip/index.html
@@ -75,6 +75,7 @@ bg-success
                     <a href="." class="dropdown-item active">UNSC 9666 - 2024-06-24 <span class="sr-only">(active)</span></a>
                     <a href="../2024-12-17-pv9818-ip/" class="dropdown-item">UNSC 9818 - 2024-12-17</a>
                     <a href="../2025-03-12-pv9877-closed-ip/" class="dropdown-item">UNSC 9877 - 2025-03-12</a>
+                    <a href="../2025-06-24-pv9944-ip/" class="dropdown-item">UNSC 9944 - 2025-06-24</a>
             </div>
 
                 
