--- a/fr/index.html
+++ b/fr/index.html
@@ -75,6 +75,7 @@ bg-success
                     <a href="statement1/2024-06-24-pv9666-ip/" class="dropdown-item">CSNU 9666 - 2024-06-24</a>
                     <a href="statement1/2024-12-17-pv9818-ip/" class="dropdown-item">CSNU 9818 - 2024-12-17</a>
                     <a href="statement1/2025-03-12-pv9877-closed-ip/" class="dropdown-item">CSNU 9877 - 2025-03-12</a>
+                    <a href="statement1/2025-06-24-pv9944-ip/" class="dropdown-item">CSNU 9944 - 2025-06-24</a>
             </div>
 
                 
@@ -105,8 +106,7 @@ bg-success
         </div>
 
     </header><div class="e-content entry-content" itemprop="articleBody text">
-    <hr>
-<table><tr>
+    <table><tr>
 <th scope="col" style="width: 50px;"><a href="."></a></th>
   <th scope="col" style="width: 50px;"><a href="statement/introduction/">➡️</a></th>    
 </tr></table>
@@ -114,6 +114,7 @@ bg-success
 <p>Il peut être difficile de trouver le point de vue de l'Iran sur ces questions. Ce site Web d'information sur l'Iran contient les déclarations faites par les représentants iraniens à ces réunions du Conseil de sécurité de l'ONU. <a href="statement/introduction/">2006 à 2231(2015)</a> contient une transcription de la déclaration qui a été faite pour chacune des six séances auxquelles l'Iran a été autorisé à participer entre 2006 et 2015.</p>
 <p>La résolution 2231(2015) du Conseil de sécurité des Nations unies, qui s'est tenue le 31 juillet 2015, a étendu l'implication du Conseil de sécurité des Nations Unies dans le programme nucléaire de l'Iran jusqu'à 10 ans après le jour de l'adoption. C'est le jour de l' Finalement. Il est prévu pour le 18 octobre 2025. Après cela, l'Iran poursuivra son programme nucléaire en conjonction avec la surveillance et l'assistance de l'AIEA, mais sans les contraintes de résolution du Conseil de sécurité des Nations unies.</p>
 <p>Depuis la mise en œuvre de la résolution du Conseil de sécurité le 31 juillet 2015, deux réunions du Conseil de sécurité des Nations unies ont eu lieu en moyenne chaque année, notamment par l'Iran, qui n'ont pas fait l'objet d'une intervention. En décembre 2018, l'Iran a été autorisé à assister et à prononcer une déclaration à ces réunions. <a href="statement1/introduction1/">Après 2231(2015)</a>, les déclarations faites par l'Iran depuis décembre 2018 aux réunions du Conseil de sécurité des Nations unies.</p>
+<p>La dernière réunion du Conseil de sécurité des Nations Unies relative à la résolution 2231 (2015) s’est tenue le 24 juin 2025.</p>
 <p>Ces déclarations font souvent référence aux documents du Conseil de sécurité, de l'ONU et de l'AIEA. Pour aider à comprendre les symboles et la systaxe de ces organisations, les systèmes de documentation, à examiner la vue d'ensemble de la <a href="general/document-primer/">documentation</a>.</p>
 <hr>
 <table><tr>
