--- a/fr/statement1/2024-12-17-pv9818-ip/index.html
+++ b/fr/statement1/2024-12-17-pv9818-ip/index.html
@@ -75,6 +75,7 @@ bg-success
                     <a href="../2024-06-24-pv9666-ip/" class="dropdown-item">CSNU 9666 - 2024-06-24</a>
                     <a href="." class="dropdown-item active">CSNU 9818 - 2024-12-17 <span class="sr-only">(actif)</span></a>
                     <a href="../2025-03-12-pv9877-closed-ip/" class="dropdown-item">CSNU 9877 - 2025-03-12</a>
+                    <a href="../2025-06-24-pv9944-ip/" class="dropdown-item">CSNU 9944 - 2025-06-24</a>
             </div>
 
                 
