--- a/fr/statement1/2025-03-12-pv9877-closed-ip/index.html
+++ b/fr/statement1/2025-03-12-pv9877-closed-ip/index.html
@@ -75,6 +75,7 @@ bg-success
                     <a href="../2024-06-24-pv9666-ip/" class="dropdown-item">CSNU 9666 - 2024-06-24</a>
                     <a href="../2024-12-17-pv9818-ip/" class="dropdown-item">CSNU 9818 - 2024-12-17</a>
                     <a href="." class="dropdown-item active">CSNU 9877 - 2025-03-12 <span class="sr-only">(actif)</span></a>
+                    <a href="../2025-06-24-pv9944-ip/" class="dropdown-item">CSNU 9944 - 2025-06-24</a>
             </div>
 
                 
@@ -107,6 +108,7 @@ bg-success
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2024-12-17-pv9818-ip/">⬅️</a></th>
+  <th scope="col" style="width: 50px;"><a href="../2025-06-24-pv9944-ip/">➡️</a></th>
   <!-- <th scope="col" style="width: 50px;"><a href="/fr/">➡️</a></th> --> <!-- back to home page -->    
 </tr></table>
 <p>Nations Unies Conseil de sécurité S/PV.9877</p>
@@ -161,7 +163,7 @@ bg-success
 <hr>
 <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2024-12-17-pv9818-ip/">⬅️</a></th>
-  <th scope="col" style="width: 50px;"><a href="."></a></th> <!-- blank-->
+  <th scope="col" style="width: 50px;"><a href="../2025-06-24-pv9944-ip/">➡️</a></th>
   <th scope="col" style="width: 50px;"><a href=".">⬆️</a></th>      
 </tr></table>
 </div>
