Nikola auto commit.
Source commit: 1da9f60a66795236ede72344a6cd959e587fddc5
Nikola version: 8.3.3

--- a/en/index.html
+++ b/en/index.html
@@ -114,6 +114,7 @@ bg-success
 <p>There can be difficulty in finding the viewpoint of Iran on these matters. This <em>Iran Information</em> website provides the statements made by Iranian representatives at these UNSC meetings. <a href="statement/introduction/">2006 to 2231(2015)</a> contains a transcript of the statement that was delivered for each of the six meetings Iran was permitted to attend between 2006 and 2015. </p>
 <p>UNSC resolution 2231(2015), held on 31 July 2015, extended UNSC involvement in Iran's nuclear program until 10 years after <em>Adoption day</em>. This is <em>Termination day</em>. It is scheduled for 18 October 2025. After this Iran will continue its nuclear program in conjunction with IAEA monitoring and assistance, but without UNSC resolution constraints.</p>
 <p>Since the UNSC resolution was implemented on 31 July 2015, there have been an average of two UNSC meetings each year involving Iran's <em>non-poliferation</em>. In December 2018 Iran was permitted to attend and deliver a statement at these meetings. <a href="statement1/introduction1/">After 2231(2015)</a> are the statements delivered by Iran since December 2018 at the UNSC meetings.</p>
+<p>The final UNSC meeting in relation to resolution 2231(2015) was held on 24 June 2025.</p>
 <p>The statements frequently make references to UNSC, UN and IAEA documents. To aid with understanding the symbols and systax of these organisations documentation systems review the <a href="general/document-primer/">documentation overview</a>.</p>
 <hr>
 <table><tr>
