Nikola auto commit.
Source commit: 0cfa541f3cf6414f1de02e8cd07d8f294f28f093
Nikola version: 8.3.3

--- a/en/statement1/2025-06-24-pv9944-ip/index.html
+++ b/en/statement1/2025-06-24-pv9944-ip/index.html
@@ -110,7 +110,7 @@ bg-success
 
 <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2025-03-12-pv9877-closed-ip/">⬅️</a></th>
-  <th scope="col" style="width: 50px;"><a href="."></a></th> <!-- blank-->
+  <th scope="col" style="width: 50px;"><a href="../2025-09-19-pv10001-ip/">➡️</a></th>
 </tr></table>
 <p>United Nations Security Council S/PV.9944</p>
 <p>Eightieth year 9944<sup>th</sup> meeting</p>
@@ -137,7 +137,7 @@ bg-success
 <hr>
 <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2025-03-12-pv9877-closed-ip/">⬅️</a></th> 
-  <th scope="col" style="width: 50px;"><a href="."></a></th> <!-- blank--> 
+  <th scope="col" style="width: 50px;"><a href="../2025-09-19-pv10001-ip/">➡️</a></th>  
   <th scope="col" style="width: 50px;"><a href=".">⬆️</a></th>      
 </tr></table>
 </div>
