Nikola auto commit.
Source commit: 8653c5fbe0a0df44f63d941202c187b5803b3065
Nikola version: 8.3.3

--- a/fr/statement1/2025-06-24-pv9944-ip/index.html
+++ b/fr/statement1/2025-06-24-pv9944-ip/index.html
@@ -110,8 +110,7 @@ bg-success
 
 <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2025-03-12-pv9877-closed-ip/">⬅️</a></th>
-  <th scope="col" style="width: 50px;"><a href="."></a></th> <!-- blank-->
-
+  <th scope="col" style="width: 50px;"><a href="../2025-09-19-pv10001-ip/">➡️</a></th>
 </tr></table>
 <p>Nations Unies Conseil de sécurité S/PV.9944</p>
 <p>Quatre-vingtième année 9944<sup>e</sup> séance</p>
@@ -141,8 +140,8 @@ bg-success
 <hr>
 <table><tr>
 <th scope="col" style="width: 50px;"><a href="../2025-03-12-pv9877-closed-ip/">⬅️</a></th>
-  <th scope="col" style="width: 50px;"><a href="."></a></th> <!-- blank-->
-  <th scope="col" style="width: 50px;"><a href=".">⬆️</a></th>      
+  <th scope="col" style="width: 50px;"><a href="../2025-09-19-pv10001-ip/">➡️</a></th>
+  <th scope="col" style="width: 50px;"><a href=".">⬆️</a></th>          
 </tr></table>
 </div>
     
