Nikola auto commit.
Source commit: 0de70e2bbfd260d5452371c639a774c611523b5e
Nikola version: 8.3.3

--- a/en/statement1/2025-09-19-pv10001-ip/index.html
+++ b/en/statement1/2025-09-19-pv10001-ip/index.html
@@ -100,6 +100,10 @@ bg-success
 <article class="post-text storypage" itemscope="itemscope" itemtype="http://schema.org/Article"><header><h1 class="p-name entry-title" itemprop="headline name"><a href="." class="u-url">UNSC Meeting 10001 – 2025-09-19</a></h1>
 
         
+        <div class="metadata posttranslations translations">
+            <h3 class="posttranslations-intro">Also available in:</h3>
+                <p><a href="../../../fr/statement1/2025-09-19-pv10001-ip/" rel="alternate" hreflang="fr">Français</a></p>
+        </div>
 
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <!-- 2025-09-19 meeting. Record of meeting available 2025-09-26 - 7 days. -->
