--- a/en/statement1/2025-09-19-pv10001-ip/index.html
+++ b/en/statement1/2025-09-19-pv10001-ip/index.html
@@ -76,6 +76,7 @@ bg-success
                     <a href="../2024-12-17-pv9818-ip/" class="dropdown-item">UNSC 9818 - 2024-12-17</a>
                     <a href="../2025-03-12-pv9877-closed-ip/" class="dropdown-item">UNSC 9877 - 2025-03-12</a>
                     <a href="../2025-06-24-pv9944-ip/" class="dropdown-item">UNSC 9944 - 2025-06-24</a>
+                    <a href="." class="dropdown-item active">UNSC 10001 - 2025-09-19 <span class="sr-only">(active)</span></a>
             </div>
 
                 
