Nikola auto commit.
Source commit: 97aefbfa5334d6e3926352b6c93bf9d0ace8739a
Nikola version: 8.3.3

--- a/fr/statement/2010-06-09-pv6335-res1929-2010-ip/index.html
+++ b/fr/statement/2010-06-09-pv6335-res1929-2010-ip/index.html
@@ -117,7 +117,7 @@ bg-success
 <p>New York</p>
 <p>Ordre du jour: Non-prolifération</p>
 <p>Résolution 1803 (2008) Vote : 12-2-1</p>
-<p>Le vote a eu lieu après la publication de la déclaration de l'Iran.</p>
+<p>Vote effectué avant la publication de la déclaration de l'Iran</p>
 <p>Extrait du compte rendu de la réunion : <a href="https://www.undocs.org/fr/S/PV.6335?direct=true#page=18">https://www.undocs.org/fr/S/PV.6335</a> p.18</p>
 <p>Résolution: <a href="https://www.undocs.org/fr/S/RES/1929%282010%29?direct=true">https://www.undocs.org/fr/S/RES/1929(2010)</a></p>
 <p><br></p>
