Nikola auto commit.
Source commit: 8cd5b5804c705220c676f9c74c7959fb94f1ff2a
Nikola version: 8.3.3

--- a/fr/statement/2015-07-20-pv7488-res2231-2015-ip/index.html
+++ b/fr/statement/2015-07-20-pv7488-res2231-2015-ip/index.html
@@ -117,7 +117,7 @@ bg-success
 <p>New York</p>
 <p>Ordre du jour: Non-prolifération</p>
 <p>Résolution 2231 (2015) Vote : 15-0-0</p>
-<p>Le vote a eu lieu après la publication de la déclaration de l'Iran.</p>
+<p>Vote effectué avant la publication de la déclaration de l'Iran</p>
 <p>Extrait du compte rendu de la réunion : <a href="https://www.undocs.org/fr/S/PV.7488?direct=true#page=14">https://www.undocs.org/fr/S/PV.7488</a> p.14</p>
 <p>Résolution: <a href="https://www.undocs.org/fr/S/RES/2231%282015%29?direct=true">https://www.undocs.org/fr/S/RES/2231(2015)</a></p>
 <p><br></p>
